--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,7 +1,7 @@
 /* google fonts  */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
-/* nav-bar-style strating */
+/* common part */
 body{
     font-family: 'Poppins', sans-serif;
     margin:0;
@@ -12,6 +12,8 @@ body{
     
     height: 677px;
 }
+
+/* nav-bar-style strating */
 .nav-head{
  display: flex;
  align-items: center;
@@ -84,9 +86,6 @@ nav li a{
 
 
 /* players card sections */
-    
-   
-
 .players-store{
     display: grid;
     grid-template-columns: repeat(3,331px);
@@ -140,6 +139,7 @@ nav li a{
     height: 427px;
 }
 
+
 /* player  news */
 .news-title h1{
     margin-left: 416px;
@@ -185,6 +185,8 @@ nav li a{
     transition: ease-in-out 1s;
 }
 
+
+
 /* footer */
 footer{
     margin-top: 158px;
@@ -216,6 +218,7 @@ footer{
 }
 
 
+
 /* media quary mobile version */
 
 @media only screen and (max-width:668px) {
@@ -226,7 +229,7 @@ footer{
         width: 295%;
     }
     
-
+/* nav part css */
     .nav-head {
         display: grid;
         align-items: center;
@@ -286,12 +289,13 @@ footer{
    }
     
 
-    /* player */
+
+    /* player psrt css*/
     .players-store {
         display: grid;
         grid-template-columns: repeat(1,330px);
        
-        /* justify-content: center; */
+        
         align-items: center;
         margin-top: 47px;
         grid-row-gap: 24px;
@@ -303,7 +307,10 @@ footer{
         box-shadow: 0px 0px 40px rgb(0 0 0 / 15%);
         
     }
-    /* high volatge */
+
+
+
+    /* high volatge part css */
     .high-volt {
         margin-top: 60px;
         margin-left: 16px;
@@ -326,7 +333,7 @@ footer{
     }
 
    
-    /* news */
+    /* news part css */
     .news-title h1 {
          margin-left:15px;
         color: gray;
@@ -370,7 +377,7 @@ footer{
     }
 
 
-    /* footer */
+    /* footer part css */
     footer{
         margin-top: 54px;
     }
@@ -463,7 +470,7 @@ footer{
    }
     
 
-    /* player */
+    /* player part css*/
     .players-store {
         display: grid;
         grid-template-columns: repeat(1,330px);
@@ -481,7 +488,7 @@ footer{
         box-shadow: 0px 0px 40px rgb(0 0 0 / 15%);
         
     }
-    /* high volatge */
+    /* high volatge part css */
     .high-volt {
         margin-top: 60px;
         margin-left: 16px;
@@ -504,7 +511,7 @@ footer{
     }
 
    
-    /* news */
+    /* news part css*/
     .news-title h1 {
          margin-left:15px;
         color: gray;
@@ -548,7 +555,7 @@ footer{
     }
 
 
-    /* footer */
+    /* footer part css */
     footer{
         margin-top: 54px;
     }
